public/styles/master.css
/* ... */
article.index nav.alphabet ul li:hover { cursor: pointer; color: #1c1f21; }
article.index nav.alphabet.fixed + section { padding-top: 54px; }
article.index section { margin-top: 30px; }
article.index section h3.letter { position: relative; color: #ccc; text-transform: uppercase; font-size: 1.125em; margin: 0 35px; font-weight: bold; }
article.index section h3.letter:before { display: block; content: ''; width: 25px; left: -35px; top: 50%; position: absolute; border-bottom: 1px solid #e6e6e6; }
article.index section h3.letter:after { display: block; content: ''; width: 965px; left: 20px; top: 50%; border-bottom: 1px solid #e6e6e6; position: absolute; }
article.index section ul { margin-top: 25px; overflow: hidden; }
article.index section ul li { border-radius: 4px; overflow: hidden; width: 180px; float: left; margin-right: 30px; margin-bottom: 30px; }
article.index section ul li.no-margin { margin-right: 0; }
article.index section ul li a { display: block; width: 180px; overflow: hidden; text-decoration: none; opacity: 1; transition: opacity 0.3s ease-out; }
article.index section ul li a:hover { opacity: 0.7; }
article.index section ul li div { text-align: center; border-radius: 4px; border-top-left-radius: 0; border-top-right-radius: 0; border: 1px solid #d9d9d9; padding: 15px 0; border-top: 0; }
article.index section ul li div h4 { color: #1c1f21; font-weight: bold; font-size: 0.9375em; margin-bottom: 5px; }
article.index section ul li div p { color: #acb8c0; font-size: 0.9375em; }

section#main article.comparison header.header .sm-unit { margin: 0 auto; width: 100%; max-width: 448px; padding: 0 5%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }

/* section#main */
/* @group of Modules */
section.module { width: 100%; margin: 0 0 50px 0; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
section.module.timeline { border: 1px solid #d9d9d9; border-radius: 5px; overflow: hidden; }
section.module.timeline h3 { float: left; margin: 30px 0 30px 30px; font-size: 0.9375em; font-weight: 700; }
section.module.timeline h3:first-of-type { color: #29b988; }
section.module.timeline h3:last-of-type { color: #2781bb; }
section.module.timeline h3 span { display: block; color: #1c1f21; font-size: 1.33333em; font-family: "chaparral-pro", serif; }
section.module.timeline h4 { display: inline; margin-left: 30px; line-height: 36px; color: #1c1f21; font-size: 0.9375em; font-weight: 700; }
section.module.timeline h4:before { content: ''; display: inline-block; position: relative; top: 1px; margin-right: 10px; border-radius: 50%; width: 12px; height: 12px; }
section.module.timeline h4:first-of-type:before { background-color: #29b988; }
section.module.timeline h4:last-of-type:before { background-color: #2781bb; }
section.module.timeline #filter { position: relative; float: right; margin-top: 33px; margin-right: 64px; }
section.module.timeline #filter ul { display: inline-block; position: relative; width: 190px; border: 1px solid #d9d9d9; font-family: "Source Sans Pro", sans-serif; font-weight: 700; color: #6a7d90; text-align: center; cursor: pointer; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
section.module.timeline #filter > ul { color: #6a7d90; height: 37px; overflow-y: hidden; font-size: 0.875em; }
section.module.timeline #filter > ul.active { overflow-y: visible; }
section.module.timeline #filter > ul ul { position: absolute; color: #d9d9d9; top: 35px; left: -1px; box-shadow: 0px 0px 0px rgba(1, 1, 1, 0.05), -1px 1px 1px rgba(1, 1, 1, 0.05), 1px 2px 2px rgba(1, 1, 1, 0.05); }
section.module.timeline #filter li { position: relative; height: 37px; line-height: 37px; background-color: #fff; }
section.module.timeline #filter li:hover { color: #6a7d90; }
section.module.timeline #filter li:not(:last-child) { border-bottom: 1px solid #d9d9d9; }
section.module.timeline #filter .arrow { display: inline-block; width: 33px; height: 37px; border: 1px solid #d9d9d9; position: relative; left: -4px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
section.module.timeline #filter .arrow.disabled span { border-color: #d9d9d9; }
section.module.timeline #filter .arrow.enabled { cursor: pointer; }
section.module.timeline #filter .arrow.enabled span { border-color: #6a7d90; }
section.module.timeline #filter .arrow.prev { position: absolute; left: -32px; }
section.module.timeline #filter .arrow.prev span { float: left; width: 8px; height: 8px; border-style: solid; border-width: 2px 2px 0 0; -webkit-transform: rotate(-135deg); -moz-transform: rotate(-135deg); -ms-transform: rotate(-135deg); -o-transform: rotate(-135deg); transform: rotate(-135deg); margin: 14px 0 0 13px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
section.module.timeline #filter .arrow.next { position: absolute; top: 0; left: 189px; }
section.module.timeline #filter .arrow.next span { float: left; width: 8px; height: 8px; border-style: solid; border-width: 2px 2px 0 0; -webkit-transform: rotate(45deg); -moz-transform: rotate(45deg); -ms-transform: rotate(45deg); -o-transform: rotate(45deg); transform: rotate(45deg); margin: 14px 0 0 10px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
section.module.timeline hr { border: 0; width: 100%; height: 1px; background: #d9d9d9; }
section.module.timeline g:hover circle { opacity: 1; }
section.module.timeline .axis path, section.module.timeline .axis line { fill: none; stroke: #d9d9d9; stroke-width: 1; shape-rendering: crispEdges; }
section.module.timeline .axis text { fill: #d9d9d9; font-family: 'Chaparral Pro'; font-size: 15px; font-weight: 600; -webkit-font-smoothing: antialiased; }
section.module.timeline path { fill: none; stroke-width: 2; }
section.module.timeline path.line1 { stroke: #29A87D; }
section.module.timeline path.line2 { stroke: #2980B9; }
/* ... */

